<resources>
    <string name="app_name">BookScan</string>

    <!-- Activity Login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_login">Log in</string>
    <string name="no_account">You haven\'t account yet?</string>
    <string name="register">Sign up now!</string>

    <!-- Drawer and Settings options -->
    <string name="home">Home</string>
    <string name="scan">Scan Book</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="books_recommended_for_you">Books recommended for you:</string>
    <string name="books_i_ve_rated">Books I\'ve rated</string>
    <string name="scan_book">Scan your book\'s ISBN</string>
    <string name="welcome_message">Welcome to BookScan App!</string>
    <string name="repeat_password">Repeat password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_a_member">Already a member?</string>
    <string name="login_now">Login now</string>
    <string name="create_account">Create account</string>
    <string name="wrong_login">Wrong username and/or password. Try again!</string>
</resources>
