<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nextbook.bookscan.activity.LoginActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginBottom="@dimen/padding_top_large"
        android:background="@drawable/scanbook_logo"/>

    <!-- Username Text Field -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextWhite"
            android:textColorHint="@color/colorTextLight"
            android:hint="@string/username" />

    </android.support.design.widget.TextInputLayout>

    <!-- Password Text Field -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_top_small"
            android:textColor="@color/colorTextWhite"
            android:textColorHint="@color/colorTextLight"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_top_large"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTextWhite"
        android:text="@string/btn_login" />

    <LinearLayout
        android:paddingTop="@dimen/padding_top_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"
            android:text="@string/no_account" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorTextLight"
            android:text="@string/register"/>
    </LinearLayout>


</LinearLayout>
